--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,15 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
+# Maven output
+target/
+
+# Idea Files
+# User-specific stuff:
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/dictionaries
+
 # Windows Installer files
 *.cab
 *.msi
