--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,14 @@
       <artifactId>protobuf-java</artifactId>
       <version>3.0.0</version>
     </dependency>
+	
+	<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk -->
+	<dependency>
+		<groupId>com.amazonaws</groupId>
+		<artifactId>aws-java-sdk</artifactId>
+		<version>1.11.123</version>
+	</dependency>
+	
   </dependencies>
 
   <build>
